force-app/main/default/objects/CanvasHybrisMigration__mdt/CanvasHybrisMigration__mdt.object-meta.xml
<CustomObject>
    <description>Metadado responsável por controle de acesso do fluxo de migração hybris.</description>
    <label>Fluxo Migração Hybris</label>
    <pluralLabel>Fluxos de Migrações Hybris</pluralLabel>
</CustomObject>