force-app/main/default/objects/CanvasHybrisMigration__mdt/fields/HasAccessToHybrisMigration__c.field-meta.xml
<CustomField>
    <fullName>HasAccessToHybrisMigration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo define se o papel possui acesso ao fluxo de migração hybris</description>
    <inlineHelpText>Marcado = Tem acesso, Desmarcado = Não tem acesso</inlineHelpText>
    <label>Tem acesso ao fluxo de migração hybris?</label>
    <type>Checkbox</type>
</CustomField>