force-app/main/default/objects/CanvasHybrisMigration__mdt/fields/OriginApiName__c.field-meta.xml
<CustomField>
    <fullName>OriginApiName__c</fullName>
    <description>Campo com o DeveloperName do papel do usuário interno ou PartnerGroup__c para usuários externos. Utilizado para o mapeamento &quot;De x Para&quot;.</description>
    <inlineHelpText>DeveloperName do papel do usuário interno ou PartnerGroup__c para usuários externos.</inlineHelpText>
    <label>API name origem</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>