force-app/main/default/objects/CanvasHybrisMigration__mdt/fields/PosToPre__c.field-meta.xml
<CustomField>
    <fullName>PosToPre__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de controle para validar o tipo de movimentação que o operador pode realizar no Hybris</description>
    <label>Pós-Pago para Pré-Pago?</label>
    <type>Checkbox</type>
</CustomField>