force-app/main/default/objects/CanvasHybrisMigration__mdt/fields/UserChannel__c.field-meta.xml
<CustomField>
    <fullName>UserChannel__c</fullName>
    <description>Valor utilizado na Hybris para associar o carrinho ao vendedor</description>
    <label>Canal do Operador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atendimento</fullName>
                <default>true</default>
                <label>Atendimento</label>
            </value>
            <value>
                <fullName>Administrativo</fullName>
            </value>
            <value>
                <fullName>Retencao</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>