force-app/main/default/objects/CanvasHybrisMigration__mdt/fields/UserLicense__c.field-meta.xml
<CustomField>
    <fullName>UserLicense__c</fullName>
    <description>Campo para mostrar se o papel diz respeito a usuário interno ou externo.</description>
    <inlineHelpText>Tipo de licença do usuário: &quot;Salesforce&quot;, &quot;Partner Community&quot;, etc</inlineHelpText>
    <label>Licença do usuário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>