force-app/main/default/objects/CanvasHybrisMigration__mdt/fields/UserSegment__c.field-meta.xml
<CustomField>
    <fullName>UserSegment__c</fullName>
    <description>Campo que indica o segmento de atendimento do usuário</description>
    <inlineHelpText>Segmento que o operador está atribuído (Púrpura, Gold, Platinum, Silver, V)</inlineHelpText>
    <label>Segmento do Usuário</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purpura</fullName>
                <default>true</default>
                <label>Purpura</label>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Vivo V</fullName>
            </value>
            <value>
                <fullName>Ouvidoria</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Loja</fullName>
            </value>
            <value>
                <fullName>Omnichannel</fullName>
            </value>
            <value>
                <fullName>PAP</fullName>
            </value>
            <value>
                <fullName>Revenda</fullName>
            </value>
            <value>
                <fullName>Suporte a Lojas</fullName>
            </value>
            <value>
                <fullName>Televendas</fullName>
            </value>
            <value>
                <fullName>Atendimento</fullName>
            </value>
            <value>
                <fullName>Backoffice</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Retencao</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>