force-app/main/default/objects/CanvasHybrisMigration__mdt/listViews/CanvasHybrisMigration.listView-meta.xml
<ListView>
    <fullName>CanvasHybrisMigration</fullName>
    <columns>MasterLabel</columns>
    <columns>OriginApiName__c</columns>
    <columns>UserSegment__c</columns>
    <columns>UserChannel__c</columns>
    <columns>UserLicense__c</columns>
    <columns>HasAccessToHybrisMigration__c</columns>
    <columns>ControleToPre__c</columns>
    <columns>PosToPre__c</columns>
    <filterScope>Everything</filterScope>
    <label>CanvasHybrisMigration</label>
    <language>en_US</language>
</ListView>